adminer/01-adminer-ns_sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adminer
  labels:
    app.kubernetes.io/component: adminer
    app.kubernetes.io/part-of: database
    istio-injection: enabled
