adminer/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adminer
    istio-injection: disabled
