adminer/06-adminer-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: adminer-gw
  namespace: adminer
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http-adminer
      protocol: HTTP
    hosts:
    - "adminer.app.example.id"
  - port:
      number: 443
      name: https-adminer
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: adminer-tls
    hosts:
    - "adminer.app.example.id"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: adminer
  namespace: adminer
spec:
  hosts:
  - "adminer.app.example.id"
  gateways:
  - adminer-gw
  http:
  - name: adminer-ui
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: adminer.adminer.svc.cluster.local
        port:
          number: 8080
---
